--- a/als-suggestions/shared/src/test/resources/test/yaml/yaml-seq-indicator-begin-with-comma.yaml
+++ b/als-suggestions/shared/src/test/resources/test/yaml/yaml-seq-indicator-begin-with-comma.yaml
@@ -13,8 +13,8 @@ paths:
               schema:
                 description: asd
                 anyOf:
-                  [ $ref: "#/components/schemas/anotherSchema",
-                    $ref: "#/components/schemas/mySchema"  *]
+                  [*, $ref: "#/components/schemas/anotherSchema",
+                   $ref: "#/components/schemas/mySchema"]
 
 components:
   schemas:
